apps/atuin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: atuin
  namespace: atuin
  labels:
    app: atuin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsNonRoot: true
      containers:
        - args:
            - start
          image: ghcr.io/atuinsh/atuin:18.16.0
          name: atuin
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /healthz
              port: 8888
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: atuin-config
      volumes:
        - name: atuin-config
          configMap:
            name: atuin-config
