apps/atuin/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin

spec:
  type: ClusterIP
  selector:
    app: atuin
  ports:
    - name: http
      port: 80
      targetPort: 8888
    - name: http-metrics
      port: 9001
      targetPort: 9001
