apps/atuin/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: atuin
  namespace: atuin
  annotations:
    item.homer.rajsingh.info/name: "Atuin"
    item.homer.rajsingh.info/subtitle: "Shell History Sync"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/webp/atuin.webp"
    service.homer.rajsingh.info/name: "Tools"
    service.homer.rajsingh.info/icon: "fas fa-screwdriver-wrench"

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - atuin.prosto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 80
